--- a/1.标签体系.md
+++ b/1.标签体系.md
@@ -7,7 +7,8 @@
 ## 标签命名规则
 |标签主题|标签类型|开发方式|是否互斥|用户维度|
 |---    |---    |---     |---   |---    |
-|A：用户属性 B：| 1: 分类型 2：统计型 | 1：离线统计型 2：流统计型 3：算法型 | 1：互斥 2：非互斥 | 1：UserId 2：MemberId |
+|A：用户属性   
+ B：| 1: 分类型 2：统计型 | 1：离线统计型 2：流统计型 3：算法型 | 1：互斥 2：非互斥 | 1：UserId 2：MemberId |
 
 
 ---标签主题：用于刻画属于那种类型的标签，如用户属性、用户行为、用户消费、风险控制等多种类型，可用A、B、C、D等字母表示各标签主题；
