--- a/1.标签体系.md
+++ b/1.标签体系.md
@@ -26,5 +26,7 @@ A111U 001_001
 #### 5、用户维度：
 用于刻画该标签是打在用户唯一标识（userid）上，还是打在用户使用的设备（cookieid）上。可用U、C等字母分别标识userid和cookieid维度。
 
+## 标签元数据
 
+![label metadata](label-metadata.png)
 
