--- a/1.标签体系.md
+++ b/1.标签体系.md
@@ -8,9 +8,9 @@
 该类标签通过数据挖掘产生，应用在对用户的某些属性或某些行为进行预测判断。例如根据一个用户的行为习惯判断该用户是男性还是女性，根据一个用户的消费习惯判断其对某商品的偏好程度。该类标签需要通过算法挖掘产生。
 
 ## 标签命名规则
-|标签主题|标签类型|开发方式|是否互斥|用户维度|
-|---    |---    |---     |---   |---    |
-|A：用户属性<br>B：用户行为<br>C：用户消费 <br>D：预留|1: 分类型<br>2：统计型|1：离线统计型<br>2：流统计型<br>3：算法型|1：互斥<br>2：非互斥|U：UserId<br>M：MemberId|
+|标签主题|标签类型|开发方式|是否互斥|用户维度|标签一级分类|标签标识|
+|---    |---    |---     |---   |---    |---    |---    |
+|A：用户属性<br>B：用户行为<br>C：用户消费 <br>D：预留|1: 分类型<br>2：统计型|1：离线统计型<br>2：流统计型<br>3：算法型|1：互斥<br>2：非互斥|U：UserId<br>M：MemberId|001 002... 递增|001 002...递增|
 ```
 A111U 001_001
 ```
@@ -24,7 +24,7 @@ A111U 001_001
 #### 4、是否互斥标签：
 对应同一级类目下（如一级标签、二级标签），各标签之间的关系是否为互斥，可将标签划分为互斥关系和非互斥关系。例如对于男、女标签就是互斥关系，同一个用户不是被打上男性标签就是女性标签，对于高活跃、中活跃、低活跃标签也是互斥关系；
 #### 5、用户维度：
-用于刻画该标签是打在用户唯一标识（userid）上，还是打在用户使用的设备（cookieid）上。可用U、C等字母分别标识userid和cookieid维度。
+用于刻画该标签是打在用户唯一标识（memberid）上，还是打在用户匿名身份标识（userid）上。可用U、M等字母分别标识userid和memberid维度。
 
 ## 标签元数据
 
