--- a/1.标签体系.md
+++ b/1.标签体系.md
@@ -11,7 +11,7 @@
 |标签主题|标签类型|开发方式|是否互斥|用户维度|标签一级分类|标签序号|
 |---    |---    |---     |---   |---    |---    |---    |
 |A：用户属性<br>B：用户行为<br>C：用户消费 <br>D：预留|1: 分类型<br>2：统计型|1：离线统计型<br>2：流统计型<br>3：算法型|1：互斥<br>2：非互斥|U：UserId<br>M：MemberId|001 002... 递增|001 002...递增|
-```
+```json
 A111U 001_001
 ```
 
