--- a/2.标签实时统计算法.md
+++ b/2.标签实时统计算法.md
@@ -1,11 +1,15 @@
-## 标签实时统计类型算法
+### 目录
+1. [标签体系](1.标签体系.md)
+2. [标签实时统计算法](2.标签实时统计算法.md)
 
-### 该类算法支持标签满足如下条件：
+### 标签实时统计类型算法
+
+#### 该类算法支持标签满足如下条件：
  
 >* 开发方式: 3-实时统计
 >* 标签类型：1-分类 or 2-统计
 
-### 算法规则定义
+#### 算法规则定义
 ```javascript
 //标签类型1-分类
 //以性别-标签为例
@@ -42,7 +46,7 @@
 
 ```
 
-### 规则中操作符
+#### 规则中操作符
 | 逻辑运算符 | 逻辑运算符中文 | 字段类型           |
 | ---------- | -------------- | ------------------ |
 | eq         | 相等           | 字符串、数字、日期 |
