--- a/1.标签体系.md
+++ b/1.标签体系.md
@@ -1,4 +1,8 @@
-## 标签类型
+### 目录
+1. [标签体系](1.标签体系.md)
+2. [标签实时统计算法](2.标签实时统计算法.md)
+
+### 标签类型
 用户画像建模其实就是对用户进行打标签，从对用户打标签的方式来看，一般分为三种类型
 #### 统计类标签：
 这类标签是最为基础也最为常见的标签类型，例如对于某个用户来说，他的性别、年龄、城市、星座、近7日活跃时长、近7日活跃天数、近7日活跃次数等字段可以从用户注册数据、用户访问、消费类数据中统计得出。该类标签构成了用户画像的基础；
@@ -11,7 +15,7 @@
 |标签主题|标签类型|开发方式|是否互斥|用户维度|标签一级分类|标签序号|
 |---    |---    |---     |---   |---    |---    |---    |
 |A：用户属性<br>B：用户行为<br>C：用户消费 <br>D：预留|1: 分类型<br>2：统计型|1：离线统计型<br>2：流统计型<br>3：算法型|1：互斥<br>2：非互斥|U：UserId<br>M：MemberId|001 002... 递增|001 002...递增|
-```json
+```
 A111U 001_001
 ```
 
