--- a/3.Event模型设计.md
+++ b/3.Event模型设计.md
@@ -5,10 +5,10 @@
 
 ### Event模型设计
 
-#### 该类算法支持标签满足如下条件：
+#### Event开发注意事项：
  
 >* 不同的event 在kafka中使用不同的topic
->* 标签类型：1-分类 or 2-统计
+>* 事件消费时候保持幂等性
 
 #### 算法规则定义
 ```javascript
